Resolves#1 Get mean amplitude over certain time

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/calibration"
-        android:onClick="gotoCalib" />
+        android:onClick="calibrate" />
 
 </RelativeLayout>
