--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Activate EarGuard"
-        android:id="@+id/textView"
+        android:id="@+id/mainMessage"
         android:layout_above="@+id/toggleButton1"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="79dp" />
@@ -37,6 +37,22 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/calibration"
-        android:onClick="calibrate" />
+        android:onClick="calibrate"
+        android:background="@color/translucent"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:paddingLeft="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="0.00"
+        android:id="@+id/instantExposure"
+        android:layout_marginTop="53dp"
+        android:layout_below="@+id/toggleButton1"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
