--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,22 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentStart="true"
         android:clickable="true"
-        android:paddingLeft="20dp" />
+        android:paddingLeft="20dp"
+        android:textColor="#0e2253" />
+
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/settings"
+        android:onClick="accessSettings"
+        android:background="@color/translucent"
+        android:clickable="true"
+        android:paddingRight="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="#c3f7f8" />
 
     <TextView
         android:layout_width="wrap_content"
