Whatsapp warning can be activated in settings Resolves#21

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -10,4 +10,9 @@
             android:summary="Please provide your username"></EditTextPreference>
     </PreferenceScreen>
 
+    <CheckBoxPreference android:title="Warn Workgroup by WhatsApp"
+        android:defaultValue="false"
+        android:summary="This option if selected will allow the application to warn the members of your workgroup when noise level exceeds dangerous levels."
+        android:key="whatsappWarning" />
+
 </PreferenceScreen>
