--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,9 @@
         android:id="@+id/toggleButton1"
         android:textOff="@string/toggle_turn_off"
         android:textOn="@string/toggle_turn_on"
+        android:src="@drawable/button_small"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/button_small"/>
+        android:layout_centerHorizontal="true" />
 
 
     <TextView
@@ -30,7 +30,7 @@
         android:id="@+id/mainMessage"
         android:layout_above="@+id/toggleButton1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="79dp" />
+        android:layout_marginBottom="84dp" />
 
     <Button
         android:id="@+id/calibActButton"
@@ -39,12 +39,12 @@
         android:text="@string/calibration"
         android:onClick="calibrate"
         android:background="@color/translucent"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentStart="true"
         android:clickable="true"
-        android:paddingLeft="20dp"
-        android:textColor="#0e2253" />
+        android:paddingLeft="15dp"
+        android:textColor="#c5f6f7"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/settingsButton"
@@ -54,7 +54,7 @@
         android:onClick="accessSettings"
         android:background="@color/translucent"
         android:clickable="true"
-        android:paddingRight="20dp"
+        android:paddingRight="5dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
