Integrated WhatsApp messaging Resolves#21

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -10,9 +10,18 @@
             android:summary="Please provide your username"></EditTextPreference>
     </PreferenceScreen>
 
-    <CheckBoxPreference android:title="Warn Workgroup by WhatsApp"
-        android:defaultValue="false"
-        android:summary="This option if selected will allow the application to warn the members of your workgroup when noise level exceeds dangerous levels."
-        android:key="whatsappWarning" />
+    <PreferenceScreen
+        android:key="button_workgroup_category_key"
+        android:title="@string/workgroup"
+        android:persistent="false">
+        <CheckBoxPreference android:title="Warn Workgroup by WhatsApp"
+            android:defaultValue="false"
+            android:summary="This option if selected will allow the application to warn the members of your workgroup when noise level exceeds dangerous levels."
+            android:key="whatsappWarning" />
+        <CheckBoxPreference android:title="Warn Workgroup by Facebook Messenger"
+            android:defaultValue="false"
+            android:summary="This option if selected will allow the application to warn the members of your workgroup by Facebook Messenger when noise level exceeds dangerous levels."
+            android:key="fbWarning" />
+    </PreferenceScreen>
 
 </PreferenceScreen>
