Calibration method can now be choosen
Resolves #26

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -20,4 +20,11 @@
             android:key="whatsappWarning" />
     </PreferenceScreen>
 
+    <ListPreference
+        android:key="calibration_method"
+        android:title="Calibration Method"
+        android:summary="Specify calibration method."
+        android:entries="@array/listentries"
+        android:entryValues="@array/listvalues" />
+
 </PreferenceScreen>
