--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+
     <!-- opens a subscreen of settings -->
     <PreferenceScreen
         android:key="button_user_details_category_key"
@@ -31,5 +32,10 @@
         android:summary="Specify calibration method."
         android:entries="@array/listentries"
         android:entryValues="@array/listvalues" />
+
+    <EditTextPreference android:title="Warning Threshold"
+        android:key="dBthreshold"
+        android:summary="Specify noise threshold (in dB) that triggers warning."
+        android:defaultValue="80"></EditTextPreference>
 
 </PreferenceScreen>
